--- a/css/other/style/background.css
+++ b/css/other/style/background.css
@@ -4,7 +4,7 @@
     height: 100%;
     position: absolute;
     background-color: white;
-    background: url(https://www.todaybing.com/api/today/cn);
+    background: url(https://api.paugram.com/bing/);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 0;  
